--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^2.0.2",
     "@hookform/resolvers": "^4.1.3",
     "@next/third-parties": "^15.2.3",
     "@portabletext/react": "^3.2.1",
@@ -30,10 +31,13 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.483.0",
+    "marked": "^17.0.1",
     "motion": "^12.5.0",
     "next": "15.2.8",
+    "next-hcaptcha": "^1.4.3",
     "next-sanity": "^9.9.5",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.13",
     "prism-react-renderer": "^2.4.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -52,6 +56,7 @@
     "@sanity/client": "^6.28.3",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^22.13.13",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@types/react-google-recaptcha": "^2.1.9",
