Aggiunta rivalidazione automatica quando si aggiunge o modifica il contenuto da sanity

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,3 +9,6 @@ NEXT_PUBLIC_SANITY_API_VERSION=2024-10-18
 NEXT_PUBLIC_SANITY_PROJECT_ID=
 NEXT_PUBLIC_SANITY_DATASET=development
 SANITY_API_READ_TOKEN=
+# Secret per il webhook di revalidazione (genera una stringa casuale sicura)
+# Puoi usare: openssl rand -base64 32 oppure un generatore di password online
+SANITY_REVALIDATE_SECRET=your-secret-key-here
