--- a/vercel.json
+++ b/vercel.json
@@ -15,11 +15,11 @@
       ]
     },
     {
-      "source": "/((?!api|_next/static|_next/image|favicon.ico).*)",
+      "source": "/((?!api|_next/static|_next/image|favicon.ico|studio).*)",
       "headers": [
         {
           "key": "Cache-Control", 
-          "value": "public, max-age=0, s-maxage=31536000, must-revalidate"
+          "value": "public, s-maxage=31536000, stale-while-revalidate=86400"
         }
       ]
     }
